--- a/1.验证交易所账户.md
+++ b/1.验证交易所账户.md
@@ -12,7 +12,7 @@
 ### 示例
 
 ``` 
-Url:            https://api.bit.game/api/sendvalidcode
+Url:            https://api.bit.game/api/checkaccount
 Method:         POST
 
 ```
@@ -29,8 +29,6 @@ Method:         POST
  ### 签名方式
  ```
  sign=MD5(bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e).toLowerCase()
- 
- sign=edb1003e3139193aa3f50ffaac13bfbc
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
@@ -62,4 +60,4 @@ Method:         POST
 
 ```
 
-### 异常code描述：[点击查看](http://note.youdao.com/noteshare?id=19354d850117ebb779e05aaa2a8c2d33&sub=59A85E4F87074E388CB20CFE46825FCA)
+### 异常code描述：[点击查看](https://github.com/BitGameEN/OpenAPI/blob/master/BitGame%E6%B8%B8%E6%88%8F%E5%AF%B9%E6%8E%A5%E6%96%87%E6%A1%A3.md)
