--- a/4.提取代币.md
+++ b/4.提取代币.md
@@ -69,4 +69,4 @@ Method:         POST
 
 ```
 
-### 异常code描述：[点击查看](http://note.youdao.com/noteshare?id=19354d850117ebb779e05aaa2a8c2d33&sub=59A85E4F87074E388CB20CFE46825FCA)
+### 异常code描述：[点击查看](https://github.com/BitGameEN/OpenAPI/blob/master/BitGame%E6%B8%B8%E6%88%8F%E5%AF%B9%E6%8E%A5%E6%96%87%E6%A1%A3.md)
