--- a/1.验证交易所账户.md
+++ b/1.验证交易所账户.md
@@ -22,13 +22,14 @@ Method:         POST
 
  参数           |     类型        |必填| 描述         
 ------------ |     -------------|--|         -----------
+ appid    | int    |Y| 应用编号
  bitaccount    | String    |Y| 交易所用户名
  sign     | String        |Y| 签名   
  
  
  ### 签名方式
  ```
- sign=MD5(bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e).toLowerCase()
+ sign=MD5(appid=1&bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e).toLowerCase()
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
