--- a/3.绑定交易所账户.md
+++ b/3.绑定交易所账户.md
@@ -43,7 +43,7 @@ Method:         POST
 {
     "errorcode": 1,
     "message": "success",
-    "Date": "
+    "date": "
     {
         "uid":10000
     }
@@ -55,7 +55,7 @@ Method:         POST
 {
     "errorcode": -1,
     "message": "error message",
-    "Date": ""
+    "date": ""
 }
 ```
 
