--- a/4.提取代币.md
+++ b/4.提取代币.md
@@ -41,13 +41,13 @@ Method:         POST
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
- ### Request Message：
+ 
 成功返回：
 ``` 
 {
     "errorcode": 1,
     "message": "success",
-    "Date": ""
+    "date": ""
 }
 ```
 失败返回：
@@ -55,18 +55,8 @@ Method:         POST
 {
     "errorcode": -1,
     "message": "error message",
-    "Date": ""
+    "date": ""
 }
-```
-### Response Message：
-
-``` 
-{
-    "code": "200",
-    "message": "提交成功",
-    "data": null
-}
-
 ```
 
 ### 异常code描述：[点击查看](https://github.com/BitGameEN/OpenAPI/blob/master/BitGame%E6%B8%B8%E6%88%8F%E5%AF%B9%E6%8E%A5%E6%96%87%E6%A1%A3.md)
