--- a/7.用户消耗代币.md
+++ b/7.用户消耗代币.md
@@ -38,7 +38,7 @@ Method:         POST
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
- ### Request Message：
+
  成功返回：
 ``` 
 
@@ -54,18 +54,8 @@ Method:         POST
 {
     "errorcode": -1,
     "message": "error message",
-    "Date": ""
+    "date": ""
 }
-```
-### Response Message：
-
-``` 
-{
-    "code": "200",
-    "message": "提交成功",
-    "data": null
-}
-
 ```
 
 
