--- a/1.验证交易所账户.md
+++ b/1.验证交易所账户.md
@@ -40,7 +40,7 @@ Method:         POST
 {
     "errorcode": 1,
     "message": "success",
-    "Date": ""
+    "date": ""
 }
 ```
 失败返回：
@@ -48,7 +48,7 @@ Method:         POST
 {
     "errorcode": -1,
     "message": "error message",
-    "Date": ""
+    "date": ""
 }
 ```
 
