--- a/1.验证交易所账户.md
+++ b/1.验证交易所账户.md
@@ -34,11 +34,11 @@ Method:         POST
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
  
- 
+ HTTP/1.1 200 OK
 成功返回：
 ``` 
 {
-    "errorcode": 1,
+    "code": 0,
     "message": "success",
     "date": ""
 }
@@ -46,7 +46,7 @@ Method:         POST
 失败返回：
 ``` 
 {
-    "errorcode": -1,
+    "code": -987,
     "message": "error message",
     "date": ""
 }
