--- a/1.验证交易所账户.md
+++ b/1.验证交易所账户.md
@@ -34,8 +34,8 @@ Method:         POST
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
  
- HTTP/1.1 200 OK
-成功返回：
+###成功返回：
+HTTP/1.1 200 OK
 ``` 
 {
     "code": 0,
@@ -43,7 +43,7 @@ Method:         POST
     "date": ""
 }
 ```
-失败返回：
+###失败返回：
 ``` 
 {
     "code": -987,
