--- a/1.验证交易所账户.md
+++ b/1.验证交易所账户.md
@@ -34,7 +34,7 @@ Method:         POST
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
  
-###成功返回：
+### 成功返回：
 HTTP/1.1 200 OK
 ``` 
 {
@@ -43,7 +43,8 @@ HTTP/1.1 200 OK
     "date": ""
 }
 ```
-###失败返回：
+### 失败返回：
+HTTP/1.1 200 OK
 ``` 
 {
     "code": -987,
