--- a/6.查询用户订单历史.md
+++ b/6.查询用户订单历史.md
@@ -41,10 +41,11 @@ Method:         POST
  ```
  
 
-成功返回：
+### 成功返回：
+HTTP/1.1 200 OK
 ``` 
 {
-    "errorcode": 1,
+    "code": 0,
     "message": "success",
     "date": "{
         "total_order_count":11,
@@ -65,10 +66,11 @@ Method:         POST
 }
 ```
 
-失败返回：
+### 失败返回：
+HTTP/1.1 200 OK
 ``` 
 {
-    "errorcode": -1,
+    "code": -1,
     "message": "error message",
     "date": ""
 }
