--- a/7.用户消耗代币.md
+++ b/7.用户消耗代币.md
@@ -39,20 +39,22 @@ Method:         POST
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
 
- 成功返回：
+ ### 成功返回：
+ HTTP/1.1 200 OK
 ``` 
 
 {
-    "errorcode": 1,
+    "code": 0,
     "message": "success",
     "date": ""
 }
 ```
 
-失败返回：
+### 失败返回：
+HTTP/1.1 200 OK
 ``` 
 {
-    "errorcode": -1,
+    "code": -987,
     "message": "error message",
     "date": ""
 }
