--- a/2.发送验证码.md
+++ b/2.发送验证码.md
@@ -32,9 +32,7 @@ Method:         POST
  
  ### 签名方式
  ```
- sign=MD5(appid=1&appuid=12&bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e&language=en-US).toLowerCase()
- 
- sign=add6d6b62a0774113f624213d1192a3f
+ sign=MD5(appid=1&appuid=12&bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e&language=en-US&sendtype=1).toLowerCase()
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
