--- a/查询用户订单历史.md
+++ b/查询用户订单历史.md
@@ -9,14 +9,20 @@
 由游应用发起请求调用此接口，查询用户提取和充值订单历史记录，需要应用账户和交易所账户为绑定关系，并且需要提供最新的验证码，接口请使用服务端调用，需要提供IP白名单
 
 
-### 示例
+### 调用方法
 
 ``` 
 Url:            https://api.bit.game/api/getorderlist
 Method:         POST
 
 ```
+### headers
 
+``` 
+Content-Type:   Application/Json
+Authorization:  Bearer <token>    
+
+```
 ### 请求参数：
 
 
