--- a/绑定交易所账户.md
+++ b/绑定交易所账户.md
@@ -9,14 +9,20 @@
 由应用方发起请求调用此接口，应用账户绑定交易所账户，以便对于交易相关验证合法性，接口请使用服务端调用，需要提供IP白名单
 
 
-### 示例
+### 调用方法
 
 ``` 
 Url:            https://api.bit.game/api/bindbitgame
 Method:         POST
 
 ```
+### headers
 
+``` 
+Content-Type:   Application/Json
+Authorization:  Bearer <token>    
+
+```
 ### 请求参数：
 
 
