--- a/验证交易所账户.md
+++ b/验证交易所账户.md
@@ -9,11 +9,18 @@
 由应用方发起请求调用此接口，返回是否为交易所账户，接口请使用服务端调用，需要提供IP白名单
 
 
-### 示例
+### 调用方法
 
 ``` 
 Url:            https://api.bit.game/api/checkaccount
 Method:         POST
+
+```
+### headers
+
+``` 
+Content-Type:   Application/Json
+Authorization:  Bearer <token>    
 
 ```
 
@@ -22,18 +29,27 @@ Method:         POST
 
  参数           |     类型        |必填| 描述         
 ------------ |     -------------|--|         -----------
- appid    | int    |Y| 应用编号
- bitaccount    | String    |Y| 交易所用户名
+ appId    | int    |Y| 应用编号
+ bitAccount    | String    |Y| 交易所用户名
  sign     | String        |Y| 签名   
  
  
- ### 签名方式
+ #### 签名方式
  ```
  sign=MD5(appid=1&bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e).toLowerCase()
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
  
+ #### Request
+  ```
+ {
+    "appId": 1,
+    "bitAccount": "123456",
+    "sign": "ewwqewqeeqweqwe221312312321312312"
+ }
+  ```
+  
 ### 成功返回：
 HTTP/1.1 200 OK
 ``` 
