--- a/充值代币到应用.md
+++ b/充值代币到应用.md
@@ -9,14 +9,20 @@
 由应用方发起请求调用此接口，从玩家交易所账户余额中转入到应用内，需要应用账户和交易所账户为绑定关系，并且需要提供最新的验证码，接口请使用服务端调用，需要提供IP白名单
 
 
-### 示例
+### 调用方法
 
 ``` 
 Url:            https://api.bit.game/api/rechargetoapp
 Method:         POST
 
 ```
+### headers
 
+``` 
+Content-Type:   Application/Json
+Authorization:  Bearer <token>    
+
+```
 ### 请求参数：
 
 
@@ -41,7 +47,8 @@ Method:         POST
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
- 
+
+
 ### 成功返回：
 HTTP/1.1 200 OK
 ``` 
