--- a/发送验证码.md
+++ b/发送验证码.md
@@ -9,14 +9,20 @@
 由应用方发起请求调用此接口，向给交易所账户中绑定的邮箱或手机中发送验证码，在验证码有效期为5分钟，为防止多次发送应用内需要进行相关限制如等待60秒才可再次发送，接口请使用服务端调用，需要提供IP白名单
 
 
-### 示例
+### 调用方法
 
 ``` 
 Url:            https://api.bit.game/api/sendvalidcode
 Method:         POST
 
 ```
+### headers
 
+``` 
+Content-Type:   Application/Json
+Authorization:  Bearer <token>    
+
+```
 ### 请求参数：
 
 
@@ -36,6 +42,7 @@ Method:         POST
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
+
 
 ### 成功返回：
 HTTP/1.1 200 OK
