--- a/用户消耗代币.md
+++ b/用户消耗代币.md
@@ -9,14 +9,20 @@
 由应用方发起请求调用此接口，玩家在应用内出发消耗代币行为调用此接口，为计算开发商收益凭证，会按照规则将用户消耗掉的代币转账到开发商可支配账户内，开发商可随意使用可支配账户内代币，接口请使用服务端调用，需要提供IP白名单
 
 
-### 示例
+### 调用方法
 
 ``` 
 Url:            https://api.bit.game/api/usetoken
 Method:         POST
 
 ```
+### headers
 
+``` 
+Content-Type:   Application/Json
+Authorization:  Bearer <token>    
+
+```
 ### 请求参数：
 
 
