--- a/发送验证码.md
+++ b/发送验证码.md
@@ -42,13 +42,23 @@ Authorization:  Bearer <token>
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
-
+#### Request
+  ```
+ {
+    "appId": 1,
+    "appuid":"12",
+    "bitAccount": "test@gmail.com",
+    "language":"en-US",
+    "sendtype":1,
+    "sign": "b8796239ed8a303a4a7e37e41b978511"
+ }
+  ```
 
 ### 成功返回：
 HTTP/1.1 200 OK
-``` 
+```
 {
-    "code": 0,
+    "code": 0,
     "message": "success",
     "date": ""
 }
@@ -57,7 +67,7 @@ HTTP/1.1 200 OK
 HTTP/1.1 200 OK
 ``` 
 {
-    "code": -987,
+    "code": -987,
     "message": "error message",
     "date": ""
 }
