--- a/提取代币.md
+++ b/提取代币.md
@@ -41,28 +41,39 @@ Authorization:  Bearer <token>
 
  ### 签名方式
 ```
- sign=MD5(amount=0.01&appid=1&apporderno=2018041513205712&appuid=12&bitaccount=test@gmail.com&code=1234&key=e10adc3949ba59abbe56e057f20f883e&paramdata=MTIzNDU2&tokensymbol=bgx).toLowerCase()
- 
- sign=ab8f3dadd03a8c7cc3ba6ddf71ea5742
+ sign=MD5(amount=0.1&appid=1&apporderno=2018041513205712&appuid=12&bitaccount=test@gmail.com&code=1234&key=e10adc3949ba59abbe56e057f20f883e&paramdata=MTIzNDU2&tokensymbol=bgx).toLowerCase()
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
- 
+#### Request
+  ```
+ {
+    "amount":0.01,
+    "appId": 1,
+    "apporderno":"2018041513205712",
+    "appuid":"12",
+    "bitAccount": "test@gmail.com",
+    "code":"1234",
+    "paramdata":"MTIzNDU2",
+    "sign": "ddd93b6bc5ebbdb4cf1dc4ce64c429f4",
+    "tokensymbol":"bgx"
+ }
+  ```
 
 ### 成功返回：
 HTTP/1.1 200 OK
-``` 
+```
 {
-    "code": 0,
+    "code": 0,
     "message": "success",
     "date": ""
 }
 ```
 ### 失败返回：
 HTTP/1.1 200 OK
-``` 
+```
 {
-    "code": -987,
+    "code": -987,
     "message": "error message",
     "date": ""
 }
