--- a/查询用户订单历史.md
+++ b/查询用户订单历史.md
@@ -41,17 +41,26 @@ Authorization:  Bearer <token>
  ```
  sign=MD5(appid=1&appuid=12&bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e&ordertype=1&pagenumber=1&rowcount=10).toLowerCase()
  
- sign=0ba9127dbf09d06a549e1e932a64e2dd
- 
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
- 
+#### Request
+  ```
+ {
+    "appId": 1,
+    "appuid":"12",
+    "bitAccount": "123456",
+    "ordertype":1,
+    "pagenumber":1,
+    "rowcount":10,
+    "sign": "0ba9127dbf09d06a549e1e932a64e2dd"
+ }
+  ```
 
 ### 成功返回：
 HTTP/1.1 200 OK
 ``` 
 {
-    "code": 0,
+    "code": 0,
     "message": "success",
     "date": "{
         "total_order_count":11,
