--- a/用户消耗代币.md
+++ b/用户消耗代币.md
@@ -40,15 +40,23 @@ Authorization:  Bearer <token>
  ```
  sign=MD5(amount=0.1&appid=1&appuid=12&bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e&paramdata=MTIzNDU2&tokensymbol=bgx).toLowerCase()
  
- sign=66f985763e344ddf788938492e0019ea
- 
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
-
- ### 成功返回：
- HTTP/1.1 200 OK
-``` 
-
+#### Request
+  ```
+ {
+    "amount":0.1,
+    "appid": 1,
+    "appuid":"12",
+    "bitaccount":"test@gmail.com",
+    "paramdata":"MTIzNDU2",
+    "sign": "66f985763e344ddf788938492e0019ea",
+    "tokensymbol":"bgx"
+ }
+  ```
+### 成功返回：
+HTTP/1.1 200 OK
+```
 {
     "code": 0,
     "message": "success",
@@ -58,7 +66,7 @@ Authorization:  Bearer <token>
 
 ### 失败返回：
 HTTP/1.1 200 OK
-``` 
+```
 {
     "code": -987,
     "message": "error message",
