--- a/验证交易所账户.md
+++ b/验证交易所账户.md
@@ -34,25 +34,25 @@ Authorization:  Bearer <token>
  sign     | String        |Y| 签名   
  
  
- #### 签名方式
+#### 签名方式
  ```
  sign=MD5(appid=1&bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e).toLowerCase()
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
  
- #### Request
+#### Request
   ```
  {
-    "appId": 1,
-    "bitAccount": "123456",
-    "sign": "ewwqewqeeqweqwe221312312321312312"
+    "appid": 1,
+    "bitaccount": "test@gmail.com",
+    "sign": "119aaba591360fbb51cad8d45d8128e5"
  }
   ```
   
 ### 成功返回：
 HTTP/1.1 200 OK
-``` 
+```
 {
     "code": 0,
     "message": "success",
@@ -61,7 +61,7 @@ HTTP/1.1 200 OK
 ```
 ### 失败返回：
 HTTP/1.1 200 OK
-``` 
+```
 {
     "code": -987,
     "message": "error message",
