--- a/充值代币到应用.md
+++ b/充值代币到应用.md
@@ -38,32 +38,44 @@ Authorization:  Bearer <token>
  sign     | String  |Y| 签名   
  tokensymbol    |   String  |Y|   代币标识
  
- 
- ### 签名方式
+### 签名方式
  ```
- sign=MD5(amount=0.1&appid=1&apporderno=2018041513205712&appuid=12&bitaccount=test@gmail.com&code=1234&key=e10adc3949ba59abbe56e057f20f883e&paramdata=MTIzNDU2&tokensymbol=bgx).toLowerCase()
+ sign=MD5(amount=0.5&appid=1&apporderno=2018041515401412&appuid=12&bitaccount=test@gmail.com&code=1234&key=e10adc3949ba59abbe56e057f20f883e&paramdata=MTIzNDU2&tokensymbol=bgx).toLowerCase()
  
  sign=ddd93b6bc5ebbdb4cf1dc4ce64c429f4
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
 
+#### Request
+  ```
+ {
+    "amount":0.5,
+    "appId": 1,
+    "apporderno":"2018041515401412",
+    "appuid":"12",
+    "bitAccount": "test@gmail.com",
+    "code":"1234",
+    "paramdata":"MTIzNDU2",
+    "sign": "f27d13de2d7e02eca56ad8c62b0703de",
+    "tokensymbol":"bgx"
+ }
+  ```
 
 ### 成功返回：
 HTTP/1.1 200 OK
-``` 
+```
 {
-    "code": 0,
+    "code": 0,
     "message": "success",
     "date": ""
 }
 ```
 ### 失败返回：
 HTTP/1.1 200 OK
-``` 
-失败返回
+```
 {
-    "code": -987,
+    "code": -987,
     "message": "error message",
     "date": ""
 }
