--- a/绑定交易所账户.md
+++ b/绑定交易所账户.md
@@ -39,16 +39,24 @@ Authorization:  Bearer <token>
  ```
  sign=MD5(appid=1&appuid=12&bitaccount=test@gmail.com&code=1234&key=e10adc3949ba59abbe56e057f20f883e).toLowerCase()
  
- sign=03df9c89ac110cad0eaad2102841fcf9
- 
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
  
+### Request
+  ```
+ {
+    "appId": 1,
+    "appuid":"12",
+    "bitAccount": "test@gmail.com",
+    "code":"1234",
+    "sign": "03df9c89ac110cad0eaad2102841fcf9"
+ }
+  ```
 ### 成功返回：
 HTTP/1.1 200 OK
-``` 
+```
 {
-    "code": 0,
+    "code": 0,
     "message": "success",
     "date": "
     {
@@ -59,9 +67,9 @@ HTTP/1.1 200 OK
 ```
 ### 失败返回：
 HTTP/1.1 200 OK
-``` 
+```
 {
-    "code": -987,
+    "code": -987,
     "message": "error message",
     "date": ""
 }
