--- a/发送验证码.md
+++ b/发送验证码.md
@@ -3,7 +3,9 @@
 ## 版本信息
 版本 | 时间 |   备注
 -- | -- |   --
-0.1 | 2018-04-15
+0.1 | 2018-04-15|创建
+0.2|2018-04-27|更新
+0.3|2018-05-02|增加接口参数，MD5签名方式调整
 
 ### 描述:
 由应用方发起请求调用此接口，向给交易所账户中绑定的邮箱或手机中发送验证码，在验证码有效期为5分钟，为防止多次发送应用内需要进行相关限制如等待60秒才可再次发送，接口请使用服务端调用，需要提供IP白名单
@@ -12,7 +14,7 @@
 ### 调用方法
 
 ``` 
-Url:            https://api.bit.game/api/sendvalidcode
+Url(测试):      https://open.bitgamex.org/api/sendvalidcode
 Method:         POST
 
 ```
@@ -32,13 +34,15 @@ Authorization:  Bearer <token>
  appuid   |   String  |Y|   应用中用户的唯一标识
  bitaccount    | String    |Y| 交易所用户名
  language   |   String  |Y|   用户的语言版本
- sendtype   |   int |Y |1：绑定账户，2：提现到交易所，3：充值到游戏
- sign     | String        |Y| 签名   
+ sendtype   |   int |Y |1：绑定账户，2：提现到交易所，3：充值到游戏，4：解绑操作
+ sign     | String        |Y| 签名
+ timestamp|long|Y|标准时间戳精确到毫秒，长整型
+ uid    |int    |Y|游戏中心唯一标识绑定成功可在返回数据中得到，第一次绑定请传0，如绑定成功后sendtype=2，3，4的后续操作参数uid!=0
  
  
  ### 签名方式
  ```
- sign=MD5(appid=1&appuid=12&bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e&language=en-US&sendtype=1).toLowerCase()
+ sign=MD5(appid=1&appuid=12&bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e&language=en-US&sendtype=1&&timestamp=1525249211123&uid=0).toLowerCase()
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
@@ -50,7 +54,9 @@ Authorization:  Bearer <token>
     "bitAccount": "test@gmail.com",
     "language":"en-US",
     "sendtype":1,
-    "sign": "b8796239ed8a303a4a7e37e41b978511"
+    "sign": "b5725415c70654260e740c1712550f1f",
+    "timestamp":1525249211123,
+    "uid":0
  }
   ```
 
@@ -60,7 +66,7 @@ HTTP/1.1 200 OK
 {
     "code": 0,
     "message": "success",
-    "date": ""
+    "data": ""
 }
 ```
 ### 失败返回：
@@ -69,7 +75,7 @@ HTTP/1.1 200 OK
 {
     "code": -987,
     "message": "error message",
-    "date": ""
+    "data": ""
 }
 ```
 
