--- a/查询用户订单历史.md
+++ b/查询用户订单历史.md
@@ -3,7 +3,9 @@
 ## 版本信息
 版本 | 时间 |   备注
 -- | -- |   --
-0.1 | 2018-04-15
+0.1 | 2018-04-15|创建
+0.2|2018-04-27|更新
+0.3|2018-05-02|增加接口参数，MD5签名方式调整
 
 ### 描述:
 由游应用发起请求调用此接口，查询用户提取和充值订单历史记录，需要应用账户和交易所账户为绑定关系，并且需要提供最新的验证码，接口请使用服务端调用，需要提供IP白名单
@@ -12,7 +14,7 @@
 ### 调用方法
 
 ``` 
-Url:            https://api.bit.game/api/getorderlist
+Url(测试):      https://open.bitgamex.org/api/getorderlist
 Method:         POST
 
 ```
@@ -29,7 +31,7 @@ Authorization:  Bearer <token>
  参数名           |     类型        |必填| 描述         
 ------------ |     -------------|---|         -----------
  appid    |   int |Y|   应用编号（由交易所提供）
- appuid   |   String  |Y|   应用中用户的唯一标识
+ uid   |   String  |Y|   游戏中心用户的唯一标识
  bitaccount    | String    |Y| 交易所用户名
  ordertype  |   int |Y|   要获取的订单列表类型（1：提现订单；2：充值订单）
  pagenumber  |   int  |Y|   页码（每页10条）
@@ -39,20 +41,21 @@ Authorization:  Bearer <token>
  
  ### 签名方式
  ```
- sign=MD5(appid=1&appuid=12&bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e&ordertype=1&pagenumber=1&rowcount=10).toLowerCase()
+ sign=MD5(appid=1&bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e&ordertype=1&pagenumber=1&rowcount=10&timestamp=1525249211123&uid=1).toLowerCase()
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
 #### Request
   ```
  {
-    "appId": 1,
-    "appuid":"12",
-    "bitAccount": "123456",
+    "appId":1,
+    "bitAccount":"123456",
     "ordertype":1,
     "pagenumber":1,
     "rowcount":10,
-    "sign": "0ba9127dbf09d06a549e1e932a64e2dd"
+    "sign":"0ba9127dbf09d06a549e1e932a64e2dd",
+    "timestamp":1525249211123,
+    "uid":1
  }
   ```
 
@@ -60,24 +63,25 @@ Authorization:  Bearer <token>
 HTTP/1.1 200 OK
 ``` 
 {
-    "code": 0,
-    "message": "success",
-    "date": "{
-        "total_order_count":11,
-        "order_list":[
+    "code":0,
+    "message":"Success",
+    "data":{
+        "total_order_count":2,
+        "order_list":"[
         {
-            "tokensymbol":"ETH"
-            "amount":0.002
-            "ordertype":1
-            "date":"04-15-2018 15:01"
+            \"tokensymbol\":\"btc\",
+            \"date\":1525262896000,
+            \"amount\":20.0,
+            \"ordertype\":1
         },
         {
-            "tokensymbol":"BTX"
-            "amount":1.2
-            "ordertype":1
-            "date":"04-15-2018 17:21"
-        },{...}]
-    }"
+            \"tokensymbol\":\"btc\",
+            \"date\":1525262896123,
+            \"amount\":10.0,
+            \"ordertype\":1
+        }]"
+        
+    }
 }
 ```
 
@@ -87,7 +91,7 @@ HTTP/1.1 200 OK
 {
     "code": -987,
     "message": "error message",
-    "date": ""
+    "data": ""
 }
 ```
 
