--- a/检测交易所账户.md
+++ b/检测交易所账户.md
@@ -1,19 +1,19 @@
-# 绑定交易所账户接口
+# 发送验证码接口（非必接）
 
 ## 版本信息
 版本 | 时间 |   备注
 -- | -- |   --
-0.1 | 2018-04-15|创建
+0.1 | 2018-04-27|创建
 0.3|2018-05-02|增加接口参数，MD5签名方式调整
 
 ### 描述:
-由应用方发起请求调用此接口，应用账户绑定交易所账户，以便对于交易相关验证合法性，接口请使用服务端调用，需要提供IP白名单
+由应用方发起请求调用此接口，应用方可根据实际需要选接此接口，接口请使用服务端调用，需要提供IP白名单
 
 
 ### 调用方法
 
 ``` 
-Url(测试):      https://open.bitgamex.org/api/bindaccount
+Url(测试):      https://open.bitgamex.org/api/checkaccount
 Method:         POST
 
 ```
@@ -30,53 +30,44 @@ Authorization:  Bearer <token>
  参数           |     类型        |必填| 描述         
 ------------ |     -------------|--|         -----------
  appid    |   int |Y|   应用编号（由交易所提供）
- appuid   |   String  |Y|   应用中用户的唯一标识
  bitaccount    | String    |Y| 交易所用户名
- code   |   String  |Y|   用户由发送验证码接口获得
  sign     | String        |Y| 签名
  timestamp|long|Y|标准时间戳精确到毫秒，长整型
  
  
  ### 签名方式
  ```
- sign=MD5(appid=1&appuid=12&bitaccount=test@gmail.com&code=1234&key=e10adc3949ba59abbe56e057f20f883e&timestamp=1525249211123).toLowerCase()
+ sign=MD5(appid=1&bitaccount=test@gmail.com&key=96e79218965eb72c92a549dd5a330112&timestamp=1525249211123).toLowerCase()
  
- 按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
+ 按照参数名排序拼接后再进行32位小写MD5编码
  ```
- 
-### Request
+#### Request
   ```
  {
-    "appid": 1,
-    "appuid":"12",
-    "bitaccount": "test@gmail.com",
-    "code":"1234",
-    "sign": "03df9c89ac110cad0eaad2102841fcf9",
+    "appid":1,
+    "bitaccount":"test@gmail.com",
+    "sign":"7012bc3ee2d0729ff10e15ea748fc380",
     "timestamp":1525249211123
  }
   ```
+
 ### 成功返回：
 HTTP/1.1 200 OK
 ```
 {
     "code": 0,
     "message": "success",
-    "data": "
-    {
-        "uid":10000
-    }
-    "
+    "data": ""
 }
 ```
 ### 失败返回：
 HTTP/1.1 200 OK
-```
+``` 
 {
     "code": -987,
     "message": "error message",
     "data": ""
 }
 ```
-
 
 ### 异常code描述：[点击查看](https://github.com/BitGameEN/OpenAPI/blob/master/BitGame%E6%B8%B8%E6%88%8F%E5%AF%B9%E6%8E%A5%E6%96%87%E6%A1%A3.md)
