--- a/解除绑定关系.md
+++ b/解除绑定关系.md
@@ -1,19 +1,19 @@
-# 绑定交易所账户接口
+# 解除绑定关系
 
 ## 版本信息
 版本 | 时间 |   备注
 -- | -- |   --
-0.1 | 2018-04-15|创建
+0.1 | 2018-04-27|创建
 0.3|2018-05-02|增加接口参数，MD5签名方式调整
 
 ### 描述:
-由应用方发起请求调用此接口，应用账户绑定交易所账户，以便对于交易相关验证合法性，接口请使用服务端调用，需要提供IP白名单
+由应用方发起请求调用此接口，用户解除绑定或更换绑定时调用，解除绑定关系后无法进行交易操作需要重新绑定交易所账号信息，接口请使用服务端调用，需要提供IP白名单
 
 
 ### 调用方法
 
 ``` 
-Url(测试):      https://open.bitgamex.org/api/bindaccount
+Url(测试):      https://open.bitgamex.org/api/unbindaccount
 Method:         POST
 
 ```
@@ -30,16 +30,16 @@ Authorization:  Bearer <token>
  参数           |     类型        |必填| 描述         
 ------------ |     -------------|--|         -----------
  appid    |   int |Y|   应用编号（由交易所提供）
- appuid   |   String  |Y|   应用中用户的唯一标识
  bitaccount    | String    |Y| 交易所用户名
  code   |   String  |Y|   用户由发送验证码接口获得
- sign     | String        |Y| 签名
+ sign     | String        |Y| 签名  
  timestamp|long|Y|标准时间戳精确到毫秒，长整型
+ uid|int|Y|游戏中心唯一标识，绑定交易所账户成功后由接口返回
  
  
  ### 签名方式
  ```
- sign=MD5(appid=1&appuid=12&bitaccount=test@gmail.com&code=1234&key=e10adc3949ba59abbe56e057f20f883e&timestamp=1525249211123).toLowerCase()
+ sign=MD5(appid=1&bitaccount=test@gmail.com&code=1234&key=e10adc3949ba59abbe56e057f20f883e&timestamp=1525249211123&uid=1).toLowerCase()
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
@@ -48,11 +48,11 @@ Authorization:  Bearer <token>
   ```
  {
     "appid": 1,
-    "appuid":"12",
     "bitaccount": "test@gmail.com",
     "code":"1234",
     "sign": "03df9c89ac110cad0eaad2102841fcf9",
-    "timestamp":1525249211123
+    "timestamp":1525249211123,
+    "uid":1
  }
   ```
 ### 成功返回：
@@ -61,11 +61,7 @@ HTTP/1.1 200 OK
 {
     "code": 0,
     "message": "success",
-    "data": "
-    {
-        "uid":10000
-    }
-    "
+    "data": ""
 }
 ```
 ### 失败返回：
