--- a/充值代币到应用.md
+++ b/充值代币到应用.md
@@ -3,7 +3,9 @@
 ## 版本信息
 版本 | 时间 |   备注
 -- | -- |   --
-0.1 | 2018-04-15
+0.1 | 2018-04-15|创建
+0.2|2018-04-27|更新
+0.3|2018-05-02|增加接口参数，MD5签名方式调整
 
 ### 描述:
 由应用方发起请求调用此接口，从玩家交易所账户余额中转入到应用内，需要应用账户和交易所账户为绑定关系，并且需要提供最新的验证码，接口请使用服务端调用，需要提供IP白名单
@@ -12,7 +14,7 @@
 ### 调用方法
 
 ``` 
-Url:            https://api.bit.game/api/rechargetoapp
+Url(测试):      https://open.bitgamex.org/recharge
 Method:         POST
 
 ```
@@ -33,16 +35,17 @@ Authorization:  Bearer <token>
  apporderno    |   String  |Y|   应用订单号
  appuid   |   String  |Y|   应用中用户的唯一标识
  bitaccount    | String    |Y| 交易所用户名
+ chainname|String|Y|代币所在公链名称（例eth）小写
  code   |   String  |Y|   用户由发送验证码接口获得
  paramdata  |   String  |Y|   应用透传参数原样返回（Base64编码格式200长度）
  sign     | String  |Y| 签名   
- tokensymbol    |   String  |Y|   代币标识
+ timestamp|long|Y|标准时间戳精确到毫秒，长整型 
+ tokensymbol    |   String  |Y|   代币标识（例bgx）小写
+ uid|int|Y|游戏中心用户唯一标识
  
 ### 签名方式
  ```
- sign=MD5(amount=0.5&appid=1&apporderno=2018041515401412&appuid=12&bitaccount=test@gmail.com&code=1234&key=e10adc3949ba59abbe56e057f20f883e&paramdata=MTIzNDU2&tokensymbol=bgx).toLowerCase()
- 
- sign=ddd93b6bc5ebbdb4cf1dc4ce64c429f4
+ sign=MD5(amount=0.5&appid=1&apporderno=2018041515401412&appuid=12&bitaccount=test@gmail.com&chainname=eth&code=1234&key=e10adc3949ba59abbe56e057f20f883e&paramdata=MTIzNDU2&timestamp=1525249211123&tokensymbol=bgx&uid=1).toLowerCase()
  
  按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
@@ -55,10 +58,13 @@ Authorization:  Bearer <token>
     "apporderno":"2018041515401412",
     "appuid":"12",
     "bitAccount": "test@gmail.com",
+    "chainname":"eth",
     "code":"1234",
     "paramdata":"MTIzNDU2",
     "sign": "f27d13de2d7e02eca56ad8c62b0703de",
-    "tokensymbol":"bgx"
+    "timestamp":1525249211123,
+    "tokensymbol":"bgx",
+    "uid":1
  }
   ```
 
@@ -68,7 +74,7 @@ HTTP/1.1 200 OK
 {
     "code": 0,
     "message": "success",
-    "date": ""
+    "data": ""
 }
 ```
 ### 失败返回：
@@ -77,7 +83,7 @@ HTTP/1.1 200 OK
 {
     "code": -987,
     "message": "error message",
-    "date": ""
+    "data": ""
 }
 ```
 
