--- a/发送验证码.md
+++ b/发送验证码.md
@@ -14,7 +14,7 @@
 ### 调用方法
 
 ``` 
-Url(测试):      https://open.bitgamex.org/api/sendvalidcode
+Url(测试):      https://open.bitgamex.org/api/sendverifycode
 Method:         POST
 
 ```
@@ -35,23 +35,24 @@ Authorization:  Bearer <token>
  bitaccount    | String    |Y| 交易所用户名
  language   |   String  |Y|   用户的语言版本
  sendtype   |   int |Y |1：绑定账户，2：提现到交易所，3：充值到游戏，4：解绑操作
- sign     | String        |Y| 签名
+ sign     | String        |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐再进行MD5编码)参考下面签名示例
  timestamp|long|Y|标准时间戳精确到毫秒，长整型
  uid    |int    |Y|游戏中心唯一标识绑定成功可在返回数据中得到，第一次绑定请传0，如绑定成功后sendtype=2，3，4的后续操作参数uid!=0
  
  
  ### 签名方式
  ```
- sign=MD5(appid=1&appuid=12&bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e&language=en-US&sendtype=1&&timestamp=1525249211123&uid=0).toLowerCase()
+ sign=MD5((appid=1&appuid=12&bitaccount=test@gmail.com&language=en-US&sendtype=1&timestamp=1525249211123&uid=0)+salt).toLowerCase()
  
- 按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
+(所有参数按照参数名排序拼接)+盐后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
+salt由Bit游戏中心提供
  ```
 #### Request
   ```
  {
-    "appId": 1,
+    "appid": 1,
     "appuid":"12",
-    "bitAccount": "test@gmail.com",
+    "bitaccount": "test@gmail.com",
     "language":"en-US",
     "sendtype":1,
     "sign": "b5725415c70654260e740c1712550f1f",
