--- a/提取代币.md
+++ b/提取代币.md
@@ -38,7 +38,7 @@ Authorization:  Bearer <token>
  chainname|String|Y|代币所在公链名称（例eth）小写
  code   |   String  |Y|   用户由发送验证码接口获得
  paramdata  |   String  |Y|   应用透传参数原样返回（Base64编码格式200长度，扩展使用可传""空字符串）
- sign     | String  |Y| 签名  
+ sign     | String  |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐再进行MD5编码)参考下面签名示例
  timestamp|long|Y|标准时间戳精确到毫秒，长整型 
  tokensymbol    |   String  |Y|   代币标识（例bgx）小写
  uid|int|Y|游戏中心唯一标识
@@ -46,18 +46,19 @@ Authorization:  Bearer <token>
 
  ### 签名方式
 ```
- sign=MD5(amount=0.1&appid=1&apporderno=2018041513205712&appuid=12&bitaccount=test@gmail.com&chainname=eth&code=1234&key=e10adc3949ba59abbe56e057f20f883e&paramdata=MTIzNDU2&timestamp=1525249211123&tokensymbol=bgx&uid=1).toLowerCase()
+ sign=MD5((amount=0.1&appid=1&apporderno=2018041513205712&appuid=12&bitaccount=test@gmail.com&chainname=eth&code=1234&paramdata=MTIzNDU2&timestamp=1525249211123&tokensymbol=bgx&uid=1)+salt).toLowerCase()
  
- 按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
+(所有参数按照参数名排序拼接)+盐后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
+salt由Bit游戏中心提供
  ```
 #### Request
   ```
  {
     "amount":0.01,
-    "appId":1,
+    "appid":1,
     "apporderno":"2018041513205712",
     "appuid":"12",
-    "bitAccount":"test@gmail.com",
+    "bitaccount":"test@gmail.com",
     "chainname":"eth",
     "code":"1234",
     "paramdata":"MTIzNDU2",
