--- a/查询用户订单历史.md
+++ b/查询用户订单历史.md
@@ -36,20 +36,20 @@ Authorization:  Bearer <token>
  ordertype  |   int |Y|   要获取的订单列表类型（1：提现订单；2：充值订单）
  pagenumber  |   int  |Y|   页码（每页10条）
  rowcount   |   int |Y|   每次接口返回的订单列表数量
- sign     | String  |Y| 签名   
+ sign     | String  |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐再进行MD5编码)参考下面签名示例 
  
  
  ### 签名方式
  ```
- sign=MD5(appid=1&bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e&ordertype=1&pagenumber=1&rowcount=10&timestamp=1525249211123&uid=1).toLowerCase()
+ sign=MD5((appid=1&bitaccount=test@gmail.com&ordertype=1&pagenumber=1&rowcount=10&timestamp=1525249211123&uid=1)+salt).toLowerCase()
  
- 按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
+ 所有参数加key按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
  ```
 #### Request
   ```
  {
-    "appId":1,
-    "bitAccount":"123456",
+    "appid":1,
+    "bitaccount":"123456",
     "ordertype":1,
     "pagenumber":1,
     "rowcount":10,
