--- a/检测交易所账户.md
+++ b/检测交易所账户.md
@@ -1,4 +1,4 @@
-# 发送验证码接口（非必接）
+# 检测交易所账户
 
 ## 版本信息
 版本 | 时间 |   备注
@@ -31,15 +31,16 @@ Authorization:  Bearer <token>
 ------------ |     -------------|--|         -----------
  appid    |   int |Y|   应用编号（由交易所提供）
  bitaccount    | String    |Y| 交易所用户名
- sign     | String        |Y| 签名
+ sign     | String        |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐再进行MD5编码)参考下面签名示例
  timestamp|long|Y|标准时间戳精确到毫秒，长整型
  
  
  ### 签名方式
  ```
- sign=MD5(appid=1&bitaccount=test@gmail.com&key=96e79218965eb72c92a549dd5a330112&timestamp=1525249211123).toLowerCase()
+ sign=MD5((appid=1&bitaccount=test@gmail.com&timestamp=1525249211123)+salt).toLowerCase()
  
- 按照参数名排序拼接后再进行32位小写MD5编码
+ (所有参数按照参数名排序拼接)+盐后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
+salt由Bit游戏中心提供
  ```
 #### Request
   ```
