--- a/绑定交易所账户.md
+++ b/绑定交易所账户.md
@@ -33,15 +33,16 @@ Authorization:  Bearer <token>
  appuid   |   String  |Y|   应用中用户的唯一标识
  bitaccount    | String    |Y| 交易所用户名
  code   |   String  |Y|   用户由发送验证码接口获得
- sign     | String        |Y| 签名
+ sign     | String        |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐再进行MD5编码)参考下面签名示例
  timestamp|long|Y|标准时间戳精确到毫秒，长整型
  
  
  ### 签名方式
  ```
- sign=MD5(appid=1&appuid=12&bitaccount=test@gmail.com&code=1234&key=e10adc3949ba59abbe56e057f20f883e&timestamp=1525249211123).toLowerCase()
+ sign=MD5((appid=1&appuid=12&bitaccount=test@gmail.com&code=1234&timestamp=1525249211123)+salt).toLowerCase()
  
- 按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
+(所有参数按照参数名排序拼接)+盐后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
+salt由Bit游戏中心提供
  ```
  
 ### Request
