--- a/用户消耗代币.md
+++ b/用户消耗代币.md
@@ -32,15 +32,16 @@ Authorization:  Bearer <token>
  appid    |   int |Y|   应用编号（由交易所提供）
  appuid   |   String  |Y|   应用中用户的唯一标识
  paramdata  |   String  |Y|   应用透传参数原样返回（Base64编码格式200长度）
- sign     | String  |Y| 签名   
+ sign     | String  |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐再进行MD5编码)参考下面签名示例 
  tokensymbol    |   String  |Y|   代币标识
  
  
  ### 签名方式
  ```
- sign=MD5(amount=0.1&appid=1&appuid=12&bitaccount=test@gmail.com&key=e10adc3949ba59abbe56e057f20f883e&paramdata=MTIzNDU2&tokensymbol=bgx).toLowerCase()
+ sign=MD5((amount=0.1&appid=1&appuid=12&bitaccount=test@gmail.com&paramdata=MTIzNDU2&tokensymbol=bgx)+salt).toLowerCase()
  
- 按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
+(所有参数按照参数名排序拼接)+盐后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
+salt由Bit游戏中心提供
  ```
 #### Request
   ```
