--- a/解除绑定关系.md
+++ b/解除绑定关系.md
@@ -32,16 +32,17 @@ Authorization:  Bearer <token>
  appid    |   int |Y|   应用编号（由交易所提供）
  bitaccount    | String    |Y| 交易所用户名
  code   |   String  |Y|   用户由发送验证码接口获得
- sign     | String        |Y| 签名  
+ sign     | String        |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐)再进行MD5编码参考下面签名示例
  timestamp|long|Y|标准时间戳精确到毫秒，长整型
  uid|int|Y|游戏中心唯一标识，绑定交易所账户成功后由接口返回
  
  
  ### 签名方式
  ```
- sign=MD5(appid=1&bitaccount=test@gmail.com&code=1234&key=e10adc3949ba59abbe56e057f20f883e&timestamp=1525249211123&uid=1).toLowerCase()
+ sign=MD5((appid=1&bitaccount=test@gmail.com&code=1234&key=e10adc3949ba59abbe56e057f20f883e&timestamp=1525249211123&uid=1)+salt).toLowerCase()
  
- 按照参数名排序拼接后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
+(所有参数按照参数名排序拼接)+盐后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
+salt由Bit游戏中心提供
  ```
  
 ### Request
