--- a/发送验证码.md
+++ b/发送验证码.md
@@ -32,7 +32,7 @@ Authorization:  Bearer <token>
 ------------ |     -------------|--|         -----------
  appid    |   int |Y|   应用编号（由交易所提供）
  appuid   |   String  |Y|   应用中用户的唯一标识
- bitaccount    | String    |Y| 交易所用户名
+ bitaccount    | String    |Y| 交易所用户名（邮箱或手机格式，手机格式为国家编码-手机号例 86-13901234567）
  language   |   String  |Y|   用户的语言版本
  sendtype   |   int |Y |1：绑定账户，2：提现到交易所，3：充值到游戏，4：解绑操作
  sign     | String        |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐再进行MD5编码)参考下面签名示例
