--- a/提取代币.md
+++ b/提取代币.md
@@ -34,7 +34,7 @@ Authorization:  Bearer <token>
  appid    |   int |Y|   应用编号（由交易所提供）
  apporderno    |   String  |Y|   应用订单号
  appuid   |   String  |Y|   应用中用户的唯一标识
- bitaccount    | String    |Y| 交易所用户名
+ bitaccount    | String    |Y| 交易所用户名（邮箱或手机格式，手机格式为国家编码-手机号例 86-13901234567）
  chainname|String|Y|代币所在公链名称（例eth）小写
  code   |   String  |Y|   用户由发送验证码接口获得
  paramdata  |   String  |Y|   应用透传参数原样返回（Base64编码格式200长度，扩展使用可传""空字符串）
