--- a/查询用户订单历史.md
+++ b/查询用户订单历史.md
@@ -32,7 +32,7 @@ Authorization:  Bearer <token>
 ------------ |     -------------|---|         -----------
  appid    |   int |Y|   应用编号（由交易所提供）
  uid   |   String  |Y|   游戏中心用户的唯一标识
- bitaccount    | String    |Y| 交易所用户名
+ bitaccount    | String    |Y| 交易所用户名（邮箱或手机格式，手机格式为国家编码-手机号例 86-13901234567）
  ordertype  |   int |Y|   要获取的订单列表类型（1：提现订单；2：充值订单）
  pagenumber  |   int  |Y|   页码（每页10条）
  rowcount   |   int |Y|   每次接口返回的订单列表数量
