--- a/用户消耗代币.md
+++ b/用户消耗代币.md
@@ -32,13 +32,15 @@ Authorization:  Bearer <token>
  appid    |   int |Y|   应用编号（由交易所提供）
  appuid   |   String  |Y|   应用中用户的唯一标识
  paramdata  |   String  |Y|   应用透传参数原样返回（Base64编码格式200长度）
- sign     | String  |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐再进行MD5编码)参考下面签名示例 
- tokensymbol    |   String  |Y|   代币标识
+ sign     | String  |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐再进行MD5编码)参考下面签名示例
+ timestamp|long|Y|标准时间戳精确到毫秒，长整型 
+ tokensymbol    |   String  |Y|   代币标识（例bgx）小写
+ uid|int|Y|游戏中心唯一标识
  
  
  ### 签名方式
  ```
- sign=MD5((amount=0.1&appid=1&appuid=12&bitaccount=test@gmail.com&paramdata=MTIzNDU2&tokensymbol=bgx)+salt).toLowerCase()
+ sign=MD5((amount=0.1&appid=1&appuid=12&bitaccount=test@gmail.com&paramdata=MTIzNDU2&timestamp=1525249211123&tokensymbol=bgx&uid=1)+salt).toLowerCase()
  
 (所有参数按照参数名排序拼接)+盐后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
 salt由Bit游戏中心提供
@@ -52,7 +54,9 @@ salt由Bit游戏中心提供
     "bitaccount":"test@gmail.com",
     "paramdata":"MTIzNDU2",
     "sign": "66f985763e344ddf788938492e0019ea",
-    "tokensymbol":"bgx"
+    "timestamp":1525249211123,
+    "tokensymbol":"bgx",
+    "uid":1
  }
   ```
 ### 成功返回：
