--- a/检测交易所账户.md
+++ b/检测交易所账户.md
@@ -30,7 +30,7 @@ Authorization:  Bearer <token>
  参数           |     类型        |必填| 描述         
 ------------ |     -------------|--|         -----------
  appid    |   int |Y|   应用编号（由交易所提供）
- bitaccount    | String    |Y| 交易所用户名
+ bitaccount    | String    |Y| 交易所用户名（邮箱或手机格式，手机格式为国家编码-手机号例 86-13901234567）
  sign     | String        |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐再进行MD5编码)参考下面签名示例
  timestamp|long|Y|标准时间戳精确到毫秒，长整型
  
