--- a/绑定交易所账户.md
+++ b/绑定交易所账户.md
@@ -31,7 +31,7 @@ Authorization:  Bearer <token>
 ------------ |     -------------|--|         -----------
  appid    |   int |Y|   应用编号（由交易所提供）
  appuid   |   String  |Y|   应用中用户的唯一标识
- bitaccount    | String    |Y| 交易所用户名
+ bitaccount    | String    |Y| 交易所用户名（邮箱或手机格式，手机格式为国家编码-手机号例 86-13901234567）
  code   |   String  |Y|   用户由发送验证码接口获得
  sign     | String        |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐再进行MD5编码)参考下面签名示例
  timestamp|long|Y|标准时间戳精确到毫秒，长整型
