--- a/Zh/充值代币到应用.md
+++ b/Zh/充值代币到应用.md
@@ -6,7 +6,7 @@
 0.1 | 2018-04-15|创建
 0.2|2018-04-27|更新
 0.3|2018-05-02|增加接口参数，MD5签名方式调整
-
+0.4|2018-08-02|调整接口code参数
 ### 描述:
 由应用方发起请求调用此接口，从玩家交易所账户余额中转入到应用内，需要应用账户和交易所账户为绑定关系，并且需要提供最新的验证码，接口请使用服务端调用，需要提供IP白名单
 
@@ -36,8 +36,8 @@ Authorization:  Bearer <token>
  appuid   |   String  |Y|   应用中用户的唯一标识
  bitaccount    | String    |Y| 交易所用户名（邮箱或手机格式，手机格式为国家编码-手机号例 86-13901234567）
  chainname|String|Y|代币所在公链名称（例eth）小写
- code   |   String  |Y|   用户由发送验证码接口获得
- paramdata  |   String  |Y|   应用透传参数原样返回（Base64编码格式200长度）
+ code   |   String  |Y|   用户的交易所账户绑定的Google验证器Code码
+ paramdata  |   String  |N|   应用透传参数原样返回（Base64编码格式200长度,不能为null，可以传空字符串""）
  sign     | String  |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐再进行MD5编码)参考下面签名示例 
  timestamp|long|Y|标准时间戳精确到毫秒，长整型 
  tokensymbol    |   String  |Y|   代币标识（例bgx）小写
@@ -45,7 +45,7 @@ Authorization:  Bearer <token>
  
 ### 签名方式
  ```
- sign=MD5((amount=0.5&appid=1&apporderno=2018041515401412&appuid=12&bitaccount=test@gmail.com&chainname=eth&code=1234&paramdata=MTIzNDU2&timestamp=1525249211123&tokensymbol=bgx&uid=1)+salt).toLowerCase()
+ sign=MD5((amount=0.5&appid=1&apporderno=2018041515401412&appuid=12&bitaccount=test@gmail.com&chainname=eth&code=123456&paramdata=&timestamp=1525249211123&tokensymbol=bgx&uid=1)+salt).toLowerCase()
  
 (所有参数按照参数名排序拼接)+盐后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
 salt由Bit游戏中心提供
@@ -60,8 +60,8 @@ salt由Bit游戏中心提供
     "appuid":"12",
     "bitaccount": "test@gmail.com",
     "chainname":"eth",
-    "code":"1234",
-    "paramdata":"MTIzNDU2",
+    "code":"123456",
+    "paramdata":"",
     "sign": "f27d13de2d7e02eca56ad8c62b0703de",
     "timestamp":1525249211123,
     "tokensymbol":"bgx",
