--- a/Zh/解除绑定关系.md
+++ b/Zh/解除绑定关系.md
@@ -5,6 +5,7 @@
 -- | -- |   --
 0.1 | 2018-04-27|创建
 0.3|2018-05-02|增加接口参数，MD5签名方式调整
+0.4|2018-08-02|调整接口code参数
 
 ### 描述:
 由应用方发起请求调用此接口，用户解除绑定或更换绑定时调用，解除绑定关系后无法进行交易操作需要重新绑定交易所账号信息，接口请使用服务端调用，需要提供IP白名单
@@ -31,7 +32,7 @@ Authorization:  Bearer <token>
 ------------ |     -------------|--|         -----------
  appid    |   int |Y|   应用编号（由交易所提供）
  bitaccount    | String    |Y| 交易所用户名（邮箱或手机格式，手机格式为国家编码-手机号例 86-13901234567）
- code   |   String  |Y|   用户由发送验证码接口获得
+ code   |   String  |Y|   用户的交易所账户绑定的Google验证器Code码
  sign     | String        |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐)再进行MD5编码参考下面签名示例
  timestamp|long|Y|标准时间戳精确到毫秒，长整型
  uid|int|Y|游戏中心唯一标识，绑定交易所账户成功后由接口返回
@@ -50,7 +51,7 @@ salt由Bit游戏中心提供
  {
     "appid": 1,
     "bitaccount": "test@gmail.com",
-    "code":"1234",
+    "code":"123456",
     "sign": "03df9c89ac110cad0eaad2102841fcf9",
     "timestamp":1525249211123,
     "uid":1
