--- a/Zh/绑定交易所账户.md
+++ b/Zh/绑定交易所账户.md
@@ -5,6 +5,7 @@
 -- | -- |   --
 0.1 | 2018-04-15|创建
 0.3|2018-05-02|增加接口参数，MD5签名方式调整
+0.4|2018-08-02|调整接口code参数
 
 ### 描述:
 由应用方发起请求调用此接口，应用账户绑定交易所账户，以便对于交易相关验证合法性，接口请使用服务端调用，需要提供IP白名单
@@ -32,14 +33,14 @@ Authorization:  Bearer <token>
  appid    |   int |Y|   应用编号（由交易所提供）
  appuid   |   String  |Y|   应用中用户的唯一标识
  bitaccount    | String    |Y| 交易所用户名（邮箱或手机格式，手机格式为国家编码-手机号例 86-13901234567）
- code   |   String  |Y|   用户由发送验证码接口获得
+ code   |   String  |Y|   用户的交易所账户绑定的Google验证器Code码
  sign     | String        |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐再进行MD5编码)参考下面签名示例
  timestamp|long|Y|标准时间戳精确到毫秒，长整型
  
  
  ### 签名方式
  ```
- sign=MD5((appid=1&appuid=12&bitaccount=test@gmail.com&code=1234&timestamp=1525249211123)+salt).toLowerCase()
+ sign=MD5((appid=1&appuid=12&bitaccount=test@gmail.com&code=123456&timestamp=1525249211123)+salt).toLowerCase()
  
 (所有参数按照参数名排序拼接)+盐后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
 salt由Bit游戏中心提供
@@ -51,7 +52,7 @@ salt由Bit游戏中心提供
     "appid": 1,
     "appuid":"12",
     "bitaccount": "test@gmail.com",
-    "code":"1234",
+    "code":"123456",
     "sign": "03df9c89ac110cad0eaad2102841fcf9",
     "timestamp":1525249211123
  }
