--- a/Zh/用户消耗代币.md
+++ b/Zh/用户消耗代币.md
@@ -28,19 +28,19 @@ Authorization:  Bearer <token>
 
  参数名           |     类型        |必填| 描述         
 ------------ |     -------------|------|         -----------
- amount  |   double（32，18） |Y|   消耗金额
+ amount  |   String |Y|   消耗金额
  appid    |   int |Y|   应用编号（由交易所提供）
- appuid   |   String  |Y|   应用中用户的唯一标识
- paramdata  |   String  |Y|   应用透传参数原样返回（Base64编码格式200长度）
+ chainname    |   String |Y|   链名(BTC、ETH等等)
+ orderno    |   String |Y|   最长30位的订单唯一标识
+ packageid    |   int |Y|   包ID(如不分包参数使用0)
  sign     | String  |Y| 签名(除sign外的(所有参数按照参数名排序后)+盐再进行MD5编码)参考下面签名示例
  timestamp|long|Y|标准时间戳精确到毫秒，长整型 
  tokensymbol    |   String  |Y|   代币标识（例bgx）小写
- uid|int|Y|游戏中心唯一标识
  
  
  ### 签名方式
  ```
- sign=MD5((amount=0.1&appid=1&appuid=12&bitaccount=test@gmail.com&paramdata=MTIzNDU2&timestamp=1525249211123&tokensymbol=bgx&uid=1)+salt).toLowerCase()
+ sign=MD5((amount=0.1&appid=1&chainname=eth&orderno=GU123456789001&packageid=0&timestamp=1525249211123&tokensymbol=bgx)+salt).toLowerCase()
  
 (所有参数按照参数名排序拼接)+盐后再进行32位小写MD5编码(如有空参数需使用""字符串不要传null值)
 salt由Bit游戏中心提供
@@ -48,16 +48,15 @@ salt由Bit游戏中心提供
 #### Request
   ```
  {
-    "amount":0.1,
-    "appid": 1,
-    "appuid":"12",
-    "bitaccount":"test@gmail.com",
-    "paramdata":"MTIzNDU2",
-    "sign": "66f985763e344ddf788938492e0019ea",
-    "timestamp":1525249211123,
-    "tokensymbol":"bgx",
-    "uid":1
- }
+	"amount": "0.1",
+	"appid": 1,
+	"chainname": "eth",
+	"orderno": "GU123456789001",
+	"packageid": 0,
+	"tokensymbol": "bgx",
+	"sign": "5c4e150e8f333a859484f3cc4c7be8c5",
+	"timestamp": 1535456835000
+}
   ```
 ### 成功返回：
 HTTP/1.1 200 OK
@@ -80,4 +79,4 @@ HTTP/1.1 200 OK
 ```
 
 
-### 异常code描述：[点击查看](https://github.com/BitGameEN/OpenAPI/blob/master/BitGame%E6%B8%B8%E6%88%8F%E5%AF%B9%E6%8E%A5%E6%96%87%E6%A1%A3.md)
+### 异常code描述：[点击查看](https://github.com/BitGameEN/OpenAPI/blob/master/Zh/BitGame%E6%B8%B8%E6%88%8F%E5%AF%B9%E6%8E%A5%E6%96%87%E6%A1%A3.md)
